feat: refactor Kubernetes resources for fiap-tc application and add database migration job

--- a/kubernetes/app/deployment.yml
+++ b/kubernetes/app/deployment.yml
@@ -1,44 +1,46 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: fiap-tc2
+  name: fiap-tc
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: fiap-tc2
+      app: fiap-tc
   template:
     metadata:
       labels:
-        app: fiap-tc2
+        app: fiap-tc
     spec:
       containers:
-      - name: fiap-tc2
-        image: lucascq/fiap-tc2:latest
+      - name: fiap-tc
+        image: lucascq/fiap-tc:latest
         ports:
         - containerPort: 3000
         env:
         - name: NODE_ENV
           valueFrom:
             configMapKeyRef:
-              name: fiap-tc2-config
+              name: fiap-tc-config
               key: NODE_ENV
         - name: DATABASE_URL
           valueFrom:
             secretKeyRef:
-              name: fiap-tc2-secrets
+              name: fiap-tc-secrets
               key: DATABASE_URL
         - name: AWS_ENDPOINT
           valueFrom:
             configMapKeyRef:
-              name: fiap-tc2-config
+              name: fiap-tc-config
               key: AWS_ENDPOINT
+        - name: NODE_OPTIONS
+          value: "--max-old-space-size=384 --max-semi-space-size=2 --expose-gc"
         resources:
           limits:
-            memory: "512Mi"
+            memory: "1Gi"
             cpu: "500m"
           requests:
-            memory: "256Mi"
+            memory: "512Mi"
             cpu: "100m"
         livenessProbe:
           httpGet:
@@ -58,7 +60,3 @@ spec:
           timeoutSeconds: 5
           successThreshold: 1
           failureThreshold: 3
-        lifecycle:
-          postStart:
-            exec:
-              command: ["/bin/sh", "-c", "npx prisma migrate deploy && npx prisma db seed"]
