--- a/kubernetes/secrets.yml
+++ b/kubernetes/secrets.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: fiap-tc2-secrets
+  name: fiap-tc-secrets
 type: Opaque
 data:
   # Valores em base64
