--- a/kubernetes/app/service.yml
+++ b/kubernetes/app/service.yml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: fiap-tc2-service
+  name: fiap-tc-service
 spec:
   selector:
-    app: fiap-tc2
+    app: fiap-tc
   ports:
   - port: 80
     targetPort: 3000
-  type: LoadBalancer  # Use NodePort em ambientes que não suportam LoadBalancer
+  type: LoadBalancer
