--- a/kubernetes/configmap.yml
+++ b/kubernetes/configmap.yml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: fiap-tc2-config
+  name: fiap-tc-config
 data:
   NODE_ENV: "production"
-  AWS_ENDPOINT: "https://your-aws-endpoint.com"
+  AWS_ENDPOINT: "http://localstack:4566"
   POSTGRES_HOST: "postgres-service"
   POSTGRES_PORT: "5432"
   POSTGRES_DB: "fiap_tc1_db"
