--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
             dockerfile: ./Dockerfile
         container_name: fiap_tc1_server
         environment:
-            - DATABASE_URL=postgresql://fiap:fiap@fiap_tc1_postgres:5432/fiap_tc1_db?schema=public
+            - DATABASE_URL=postgresql://fiap_tc_user:senha_dificil@tc-fiap-postgres.comilucshvgd.us-east-1.rds.amazonaws.com:5432/fiap_tc_db
             - AWS_ENDPOINT=http://localstack:4566
         depends_on:
             postgres:
